# Ballast

./: .env.example  .gitignore  PLAN.md  README.md
backend/: docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1435d65c68e0_initial_schema.py  23f125e8246a_add_gcal_event_id_scheduled_at_pending_.py  4a9f2c8b1e3d_add_messages_table.py
backend/app/: __init__.py  main.py
backend/app/agent/: cognitive_loop.py  context_assembler.py  response_formatter.py  router.py
backend/app/agent/prompts/: cognitive_loop.txt  intent_router.txt  onboarding.txt  system.txt
backend/app/agent/tools/: __init__.py  task_tools.py
backend/app/api/v1/: __init__.py  health.py  webhook.py
backend/app/calendar/: __init__.py  gcal_client.py  overlap_checker.py  slot_finder.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  crud.py  session.py
backend/app/db/models/: __init__.py  insight.py  message.py  task.py  time_debt.py  user.py
backend/app/memory/: insight_engine.py  north_star.py
backend/app/scheduler/: engine.py
backend/app/scheduler/jobs/: heartbeat.py  nightly_reflection.py  proof_of_work.py
backend/app/services/: debt_service.py  message_service.py  onboarding_service.py  schedule_service.py  scheduling_prefs.py  task_service.py  user_service.py
backend/app/telegram/: client.py  dispatcher.py
backend/app/telegram/handlers/: add_task.py  complete_task.py  confirmation.py  delete_task.py  general_chat.py  onboarding.py  push_task.py
backend/tests/: conftest.py
(+40 files in other folders)
